--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,12 @@
 @import "tailwindcss";
 
-
 * { 
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* font-family: "Open Sans", sans-serif; */
 }
+
 
 html, body {
   overflow-x: hidden; /* Emergency fix for horizontal scroll */
@@ -13,7 +14,7 @@ html, body {
 
 
 body {
-  font-family: 'Inter', system-ui, -apple-system, sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
   line-height: 1.6;
   color: #222;
   background-color: #fff;
@@ -22,21 +23,6 @@ body {
 h1, h2, h3, h4 {
   font-weight: 700;
   line-height: 1.2;
-}
-
-
-
-@font-face {
-  font-family: "Coldiac";
-  src: url("./assets/fonts/Coldiac/Coldiac.ttf") format("truetype");
-  /* font-weight: 100; */
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Coldiac";
-  src: url("./assets/fonts/Coldiac/Coldiac-Light.ttf") format("truetype");
-  font-style: normal;
 }
 
 
