--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -49,34 +49,34 @@
   z-index: 1;
 }
 
-.hero-content {
+.hero-content1 {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: white;
+  /* background:white; */
+  /* transform: translate(-50%, -50%); */
+  /* text-align: center; */
+  color: #a9bcd0;
   z-index: 2;
-  padding: 20px;
-  width: 90%;
-  max-width: 1400px;
+  /* padding: 20px; */
+  width: 100%;
+  height:50%;
+  /* max-width: 1400px; */
 }
 
 .hero-content h1 {
-  font-size: 3.8rem;               /* Mobile first */
-  font-weight: lighter;
-  margin-bottom: 1rem;
+  /* font-size: 3.8rem;               Mobile first */
+  /* font-weight: lighter; */
+  /* margin-bottom: 1rem;
   line-height: 1.1;
-  letter-spacing: -1px;
-}
+  letter-spacing: -1px; */ 
+} 
 
-.hero-content p {
+/* .hero-content p {
   font-size: 1.15rem;
   margin-bottom: 3rem;
   letter-spacing: 1px;
   font-weight: 100;
   line-height: 1.7;
-}
+} */
 
 .enquire-btn {
   color: white;
@@ -607,12 +607,12 @@
   align-items: center;
   gap: 16px;
   background: transparent;
-  color: white;
-  border: 2px solid rgba(255, 255, 255, 0.4);
+  color: #a9bcd0;
+  border: 2px solid #a9bcd0;
   padding: 20px 60px;
   font-size: 1rem;
   font-weight: 100;
-  border-radius: 60px;
+  border-radius: 10px;
   text-decoration: none;
   transition: all 0.8s cubic-bezier(0.22, 1, 0.36, 1);
   backdrop-filter: blur(10px);
