--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -187,7 +187,7 @@
 .service-img img {
   width: 100%;
   height: 340px;
-  object-fit: cover;
+  /* object-fit: cover; */
   display: block;
   transition: transform .9s ease;
 }
